--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <name>Yufei Wang (王雨飞)</name>
             </p>
             <p>
-              Ph.D. student, <br>
+              Ph.D., <br>
               <a href="https://www.ntu.edu.sg/" target="_blank">Nanyang Technological University, Singapore</a>
             </p>
             <p align=left>
@@ -77,12 +77,13 @@
               <p>
                 <ul>
 <!--                   <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font> -->
+                  <li> [Jan 27, 2025] Finally, becomes a Dr.! 🎉 </li>
                   <li> [Sep, 2024] Two papers are accepted by NeurIPS 2024！</li>
                   <li> [July, 2024] One ACM MM and two ECCV are accepted！</li>
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
                   <li> [May 2, 2024] Two papers are accepted by ICML 2024！</li>
                   <li> [Feb 27, 2024] Two papers are accepted by CVPR 2024！</li>
-                  <li> [Feb'21, 2024] Ph.D. Thesis submitted! Expect to get the graduation certificate in early of 2025 🎉 </li>
+                  <li> [Feb'21, 2024] Ph.D. Thesis submitted! Expect to get the graduation certificate in early of 2025 </li>
                 </ul>
               </p>
             </td>
@@ -875,7 +876,7 @@
                    
                   <ul>
                     <li>Journal reviewer: TPAMI, IJCV, TIP, TNNLS, TMM, TCSVT, etc</li>
-                    <li>Conference reviewer: ICML, NeurIPS, ICLR, AAAI, etc</li>
+                    <li>Conference reviewer: ICML, NeurIPS, ICLR, CVPR, AAAI, etc</li>
                   </ul>
                 </p>
               </td>
