--- a/index.html
+++ b/index.html
@@ -144,8 +144,37 @@
       <h3 style="padding-left:20px;">Robustness & Security</h3>
       </td>
       </tr> -->
+      
+    <!-- AREdit -->
+    <tr class="paper codec select">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/AREdit.jpg' width=100%>
+        </div>
 
-    <!-- context3d'24 -->
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'24</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2405.20721">
+          <span class="papertitle"> 
+            Training-Free Text-Guided Image Editing with Visual Autoregressive Model</span>
+        </a>
+        <br>
+        <strong>Yufei Wang</strong>, etc.
+        <br>
+        <em>Arxiv</em>, 2025
+        <br>
+        <a href="https://arxiv.org/abs/2503.23897">Paper</a>
+        /
+        <a href="https://github.com/wyf0912/AREdit">Code</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+    
+      <!-- context3d'24 -->
     <tr class="paper codec select">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
