--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <h2>About me</h2>
-                <p>I'm currently a Ph.D. candidate at <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre from 2020 fall, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
+                <p>I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
                 </p>
                 <p>
                 The central goal of my current research is to more effectively restore the visual world using either deep image priors (e.g., diffusion models, normalizing flows, GANs) or the degradation priors (e.g., noise formulations in the raw space) 
@@ -77,7 +77,7 @@
               <p>
                 <ul>
 <!--                   <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font> -->
-                  <li> [Jan 27, 2025] Finally, becomes a Dr.! 🎉 </li>
+                  <li> [Jan 27, 2025] Finally, become a Dr.! 🎉 </li>
                   <li> [Sep, 2024] Two papers are accepted by NeurIPS 2024！</li>
                   <li> [July, 2024] One ACM MM and two ECCV are accepted！</li>
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
