--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </td>
           <td valign="top">
             <p align="left">
-              <name>Yufei Wang (王雨飞)</name>
+              <name>Yufei Wang</name>
             </p>
             <p>
               Ph.D., <br>
@@ -60,7 +60,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <h2>About me</h2>
-                <p>I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
+                <p>Welcome! I am now a research scientist at <a href="https://research.snap.com/index.html">Snap Research</a> @ New York. I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
                 </p>
                 <p>
                 The central goal of my current research is to more effectively restore the visual world using either deep image priors (e.g., diffusion models, normalizing flows, GANs) or the degradation priors (e.g., noise formulations in the raw space) 
@@ -156,7 +156,7 @@
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'24</span> &nbsp;
+        <span class="tag">Arxiv'25</span> &nbsp;
         <a href="https://arxiv.org/pdf/2405.20721">
           <span class="papertitle"> 
             Training-Free Text-Guided Image Editing with Visual Autoregressive Model</span>
@@ -175,7 +175,36 @@
         </p> -->
       </td>
     </tr>
-    
+
+  </tr>
+
+    <!-- TPMAI -->
+    <tr class="paper select codec robust">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/pami.png' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">TPAMI'24</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2412.01646">
+          <span class="papertitle"> 
+            Robust and Transferable Backdoor Attacks Against Deep Image Compression With Selective Frequency Prior</span>
+        </a>
+        <br>
+        Yi Yu, <strong>Yufei Wang</strong>, Wenhan
+         Yang, Lanqing Guo, Zhihao Li, Shijian Lu, Ling-Yu Duan, Yap-Peng Tan, Alex C. Kot
+        <br>
+        <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2024
+        <br>
+        <a href="https://arxiv.org/pdf/2412.01646">Paper</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
+
       <!-- context3d'24 -->
     <tr class="paper codec 3d select">
       <td style="padding:20px;width:30%;vertical-align:middle">
@@ -864,6 +893,7 @@
   </tr>     
           </tbody></table>
 
+
         <!-- Internship Begin -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
@@ -871,6 +901,19 @@
               <h2>Experience</h2>
             </td>
           </tr>
+        </table>
+         <table>
+          <td style="padding:25px;width:20%;vertical-align:middle;padding-bottom:0px">
+            <div>
+              <img src='images/snap-logo.png' width=100%>
+            </div>
+          </td>
+          <td>
+              <p class="font" style="font-size: 16px">2025.02&mdash;Now: <strong>Snap Research</strong>, Research Scientist</p>
+              <p>New York, U.S.</p> 
+          </td>
+      </tr>
+
         </table>
          <table>
           <td style="padding:20px;width:20%;vertical-align:middle;padding-bottom:0px">
