--- a/index.html
+++ b/index.html
@@ -146,6 +146,34 @@
       <h3 style="padding-left:20px;">Robustness & Security</h3>
       </td>
       </tr> -->
+     <!-- sparc'25 -->
+     <tr class="paper select cp 3d">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/SparC.png' width=100%>
+        </div>    
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">arXiv'25</span> &nbsp;
+        <a href="https://lizhihao6.github.io/Raw3DGS">
+          <span class="papertitle"> 
+            SparC: Sparse Representation and Construction for High-Resolution 3D Shapes Modeling</span>
+        </a>
+        <br>
+        Zhihao Li, <strong>Yufei Wang</strong>, Heliang Zheng, Yihao Luo, Bihan Wen
+        <br>
+        arXiv, 2025
+        <br>
+        <a href="https://lizhihao6.github.io/SparC">Homepage</a>
+        /
+        <a href="https://arxiv.org/pdf/2505.14521">Paper</a>
+        <p></p>
+        <!-- <p>
+        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
+        </p> -->
+      </td>
+    </tr>
       
     <!-- AREdit -->
     <tr class="paper select cp">
