--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">arXiv'25</span> &nbsp;
+        <span class="tag">Arxiv'25</span> &nbsp;
         <a href="https://lizhihao6.github.io/Raw3DGS">
           <span class="papertitle"> 
             SparC: Sparse Representation and Construction for High-Resolution 3D Shapes Modeling</span>
@@ -169,9 +169,6 @@
         /
         <a href="https://arxiv.org/pdf/2505.14521">Paper</a>
         <p></p>
-        <!-- <p>
-        The first to utilize normalizing flow to low-light image enhancement, achieving superior performance.
-        </p> -->
       </td>
     </tr>
       
@@ -203,8 +200,31 @@
         </p> -->
       </td>
     </tr>
-
   </tr>
+
+     <!-- sparc'25 -->
+     <tr class="paper select cp 3d">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/guideSR.jpg' width=100%>
+        </div>    
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'25</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2505.00687">
+          <span class="papertitle"> 
+            GuideSR: Rethinking Guidance for One-Step High-Fidelity Diffusion-Based Super-Resolution</span>
+        </a>
+        <br>
+        Aditya Arora, Zhengzhong Tu*, <strong>Yufei Wang*</strong>, Ruizheng Bai, Jian Wang, Sizhuo Ma
+        <br>
+        Arxiv, 2025
+        <br>
+        <a href="https://arxiv.org/pdf/2505.00687">Paper</a>
+        <p></p>
+      </td>
+    </tr>
 
     <!-- TPMAI -->
     <tr class="paper select codec robust">
