--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
     </tr>
   </tr>
 
-     <!-- sparc'25 -->
-     <tr class="paper select cp 3d">
+    <!-- guideSR -->
+     <tr class="paper select cp">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/guideSR.jpg' width=100%>
