best thesis awards

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <h2>About me</h2>
-                <p>Welcome! I am now a research scientist at <a href="https://research.snap.com/index.html">Snap Research</a> @ New York. I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
+                <p>Welcome! I am now a research scientist at <a href="https://research.snap.com/index.html">Snap Research</a> @ New York. I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025 with the best Ph.D. thesis award, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
                 </p>
                 <p>
                 The central goal of my current research is to more effectively restore the visual world using either deep image priors (e.g., diffusion models, normalizing flows, GANs) or the degradation priors (e.g., noise formulations in the raw space) 
@@ -77,7 +77,8 @@
               <p>
                 <ul>
 <!--                   <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font> -->
-                  <li> [Jan 27, 2025] Finally, become a Dr.! 🎉 </li>
+                  <li> [May 26, 2025] I was awarded as the best Ph.D. thesis of both College of Engineering (CoE) and EEE of NTU! 🎉</li>
+                  <li> [Jan 27, 2025] Finally, become a Dr.! </li>
                   <li> [Sep, 2024] Two papers are accepted by NeurIPS 2024！</li>
                   <li> [July, 2024] One ACM MM and two ECCV are accepted！</li>
                   <li> [May 31, 2024] A paper is accepted by IJCV 2024！</li>
@@ -93,6 +94,7 @@
               <h2>Honors and Awards</h2>
               <p>
                 <ul>
+                  <li>The winner of the <strong>Best Thesis Award</strong> of both CoE (College of Engineering) and EEE of NTU</li>
                   <li>The National Scholarship (Top 2%) </li>
                   <li>Tang Lixin Scholarship (Top 0.2%) </li>
                   <li>SDSC Dissertation Research Fellowship 2022 (10 recipients in Singpaore)</li>
@@ -156,7 +158,7 @@
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
         <span class="tag">Arxiv'25</span> &nbsp;
-        <a href="https://lizhihao6.github.io/Raw3DGS">
+        <a href="https://lizhihao6.github.io/Sparc3D">
           <span class="papertitle"> 
             SparC: Sparse Representation and Construction for High-Resolution 3D Shapes Modeling</span>
         </a>
@@ -165,7 +167,7 @@
         <br>
         arXiv, 2025
         <br>
-        <a href="https://lizhihao6.github.io/SparC">Homepage</a>
+        <a href="https://lizhihao6.github.io/Sparc3D/">Homepage</a>
         /
         <a href="https://arxiv.org/pdf/2505.14521">Paper</a>
         <p></p>
