--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <p>
                 <ul>
 <!--                   <li><font color="red">I'm on the job market. I'm looking for a full-time job (both industry and post-doc) in U.S.. Feel free to contact me if you have any opening!</font> -->
-                  <li> [May 26, 2025] I was awarded as the best Ph.D. thesis of both College of Engineering (CoE) and EEE of NTU! 🎉</li>
+                  <li> [May 26, 2025] Awarded Best Ph.D. Thesis in EEE and was the only recipient of NTU’s <a href="https://www.ntu.edu.sg/graduate-college/news-events#Content_C097_Col00">Research Excellence Award</a> in STEM! 🎉</li>
                   <li> [Jan 27, 2025] Finally, become a Dr.! </li>
                   <li> [Sep, 2024] Two papers are accepted by NeurIPS 2024！</li>
                   <li> [July, 2024] One ACM MM and two ECCV are accepted！</li>
@@ -94,7 +94,8 @@
               <h2>Honors and Awards</h2>
               <p>
                 <ul>
-                  <li>The winner of the <strong>Best Thesis Award</strong> of both CoE (College of Engineering) and EEE of NTU</li>
+                  <li>The only recipient of the <a href="https://www.ntu.edu.sg/graduate-college/news-events#Content_C097_Col00">Research Excellence Award</a> of NTU in STEM</li>
+                  <li>The Best Ph.D. Thesis in EEE 2025</li>
                   <li>The National Scholarship (Top 2%) </li>
                   <li>Tang Lixin Scholarship (Top 0.2%) </li>
                   <li>SDSC Dissertation Research Fellowship 2022 (10 recipients in Singpaore)</li>
