--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'25</span> &nbsp;
+        <span class="tag">ICCV'25</span> &nbsp;
         <a href="https://arxiv.org/pdf/2405.20721">
           <span class="papertitle"> 
             Training-Free Text-Guided Image Editing with Visual Autoregressive Model</span>
@@ -192,7 +192,7 @@
         <br>
         <strong>Yufei Wang</strong>, Lanqing Guo, Zhihao Li, Jiaxing Huang, Pichao Wang, Bihan Wen, Jian Wan
         <br>
-        <em>Arxiv</em>, 2025
+        <em>International Conference on Computer Vision (ICCV), 2025</em>, 2025
         <br>
         <a href="https://arxiv.org/abs/2503.23897">Paper</a>
         /
