--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Publications</h2>
-                <p style="line-height: 1.5;">Topics: <button onclick="show_all(); change_color(this)">All Topics</button> / <button onclick="select_category('cp'); change_color(this)">Computational Photography & Generative models</button> / <button onclick="select_category('codec'); change_color(this)">Compression</button> / <button onclick="select_category('robust'); change_color(this)">Robustness & Security</button> / <button onclick="select_category('3d'); change_color(this)">3D vision</button>
+                <p style="line-height: 1.5;">Topics: <button onclick="show_all(); change_color(this)">All Topics</button> / <button onclick="select_category('cp'); change_color(this)">Computational Photography & Generative models</button> / <button onclick="select_category('codec'); change_color(this)">Compression</button> / <button onclick="select_category('robust'); change_color(this)">Robustness & Security</button> / <button onclick="select_category('3d'); change_color(this)">3D Vision</button>
                 </p>
                 <p><strong>(* represents the equal contribution.)</strong></p>
                 <!-- <p>
@@ -174,7 +174,29 @@
         <p></p>
       </td>
     </tr>
-      
+    <tr class="paper cp 3d">
+      <td style="padding:20px;width:30%;vertical-align:middle">
+        <div>
+          <img src='images/3d_edit.png' width=100%>
+        </div>    
+
+      </td>
+      <td style="padding:20px;width:70%;vertical-align:middle">
+        <span class="tag">Arxiv'25</span> &nbsp;
+        <a href="https://arxiv.org/pdf/2507.05426">
+          <span class="papertitle"> 
+            Mastering Regional 3DGS: Locating, Initializing, and Editing
+with Diverse 2D Priors</span>
+        </a>
+        <br>
+        Lanqing Guo, <strong>Yufei Wang</strong>, Hezhen Hu, Yan Zheng, Yeying Jin, Siyu Huang, Zhangyang Wang
+        <br>
+        arXiv, 2025
+        <br>
+        <a href="https://arxiv.org/pdf/2507.05426">Paper</a>
+        <p></p>
+      </td>
+    </tr>  
     <!-- AREdit -->
     <tr class="paper select cp">
       <td style="padding:20px;width:30%;vertical-align:middle">
