--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <h2>About me</h2>
-                <p>Welcome! I am now a research scientist at <a href="https://research.snap.com/index.html">Snap Research</a> @ New York. I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025 with the best Ph.D. thesis award, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
+                <p>Welcome! I obtained my Ph.D. degree from <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> in Singapre in Feb 2025 with the best Ph.D. thesis award, supervised by <a href="https://personal.ntu.edu.sg/bihan.wen/">Prof. Bihan Wen</a>, and <a href="https://personal.ntu.edu.sg/eackot/">Prof. Alex Kot</a>. Before that, I got my bachelor degree of computer science in 2020 from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC).
+                <!-- I am now a research scientist at <a href="https://research.snap.com/index.html">Snap Research</a> @ New York.  -->
                 </p>
                 <p>
                 The central goal of my current research is to more effectively restore the visual world using either deep image priors (e.g., diffusion models, normalizing flows, GANs) or the degradation priors (e.g., noise formulations in the raw space) 
@@ -228,7 +229,7 @@ with Diverse 2D Priors</span>
   </tr>
 
     <!-- guideSR -->
-     <tr class="paper select cp">
+     <tr class="paper cp">
       <td style="padding:20px;width:30%;vertical-align:middle">
         <div>
           <img src='images/guideSR.jpg' width=100%>
@@ -236,16 +237,14 @@ with Diverse 2D Priors</span>
 
       </td>
       <td style="padding:20px;width:70%;vertical-align:middle">
-        <span class="tag">Arxiv'25</span> &nbsp;
+        <span class="tag">ICCVW'25</span> &nbsp;
         <a href="https://arxiv.org/pdf/2505.00687">
           <span class="papertitle"> 
             GuideSR: Rethinking Guidance for One-Step High-Fidelity Diffusion-Based Super-Resolution</span>
         </a>
         <br>
         Aditya Arora, Zhengzhong Tu*, <strong>Yufei Wang*</strong>, Ruizheng Bai, Jian Wang, Sizhuo Ma
-        <br>
-        Arxiv, 2025
-        <br>
+        <em>International Conference on Computer vision Workshop(ICCVW), 2025</em>, 2025
         <a href="https://arxiv.org/pdf/2505.00687">Paper</a>
         <p></p>
       </td>
@@ -982,7 +981,7 @@ with Diverse 2D Priors</span>
             </div>
           </td>
           <td>
-              <p class="font" style="font-size: 16px">2025.02&mdash;Now: <strong>Snap Research</strong>, Research Scientist</p>
+              <p class="font" style="font-size: 16px">2025.02&mdash;2025.08: <strong>Snap Research</strong>, Research Scientist</p>
               <p>New York, U.S.</p> 
           </td>
       </tr>
